--- a/knowledgeHut Project/about.html
+++ b/knowledgeHut Project/about.html
@@ -15,7 +15,7 @@
 
     <nav class="nav">
         <div class="left-nav-items left-nav-items-about">
-            <img src="dicebear.png" alt="avatar">
+            <img src="image/dicebear.png" alt="avatar">
             <a href="https://www.linkedin.com/in/frederick-ogudo-89286278/">Frederick Ogudo | About</a>
         </div>
         <div class="right-nav-items">
@@ -34,25 +34,25 @@
     </section>
     <div class="gallery">
         <div class="gallery-item gallery-item-1">
-            <img src="ava1.jpg" alt="ava1" height="225" width="225" style="border: 1px solid">
+            <img src="image/ava1.jpg" alt="ava1" height="225" width="225" style="border: 1px solid">
         </div>
         <div class="gallery-item gallery-item-2">
-            <img src="ava2.png" alt="ava2" height="225" width="225" style="border: 1px solid">
+            <img src="image/ava2.png" alt="ava2" height="225" width="225" style="border: 1px solid">
         </div>
         <div class="gallery-item gallery-item-3">
-            <img src="ava3.jpg" alt="ava3" height="225" width="225" style="border: 1px solid">
+            <img src="image/ava3.jpg" alt="ava3" height="225" width="225" style="border: 1px solid">
         </div>
         <div class="gallery-item gallery-item-4">
-            <img src="ava4.jpg" alt="ava4" height="225" width="225" style="border: 1px solid">
+            <img src="image/ava4.jpg" alt="ava4" height="225" width="225" style="border: 1px solid">
         </div>
         <div class="gallery-item gallery-item-5">
-            <img src="ava5.jpg" alt="ava5" height="225" width="225" style="border: 1px solid">
+            <img src="image/ava5.jpg" alt="ava5" height="225" width="225" style="border: 1px solid">
         </div>
         <div class="gallery-item gallery-item-6">
-            <img src="ava6.jpg" alt="ava6" height="225" width="225" style="border: 1px solid">
+            <img src="image/ava6.jpg" alt="ava6" height="225" width="225" style="border: 1px solid">
         </div>
         <div class="gallery-item gallery-item-7">
-            <img src="ava7.jpg" alt="ava7" height="225" width="225" style="border: 1px solid">
+            <img src="image/ava7.jpg" alt="ava7" height="225" width="225" style="border: 1px solid">
         </div>
     </div>
     <div class="concluding-about">
