--- a/knowledgeHut Project/contact.html
+++ b/knowledgeHut Project/contact.html
@@ -15,7 +15,7 @@
 
     <nav class="nav">
         <div class="left-nav-items">
-            <img src="dicebear.png" alt="avatar">
+            <img src="image/dicebear.png" alt="avatar">
             <a href="https://www.linkedin.com/in/frederick-ogudo-89286278/">Frederick Ogudo | Contact</a>
         </div>
         <div class="right-nav-items">
