--- a/knowledgeHut Project/index.html
+++ b/knowledgeHut Project/index.html
@@ -15,7 +15,7 @@
 
     <nav class="nav">
         <div class="left-nav-items">
-            <img src="dicebear.png" alt="avatar">
+            <img src="image/dicebear.png" alt="avatar">
             <a href="https://www.linkedin.com/in/frederick-ogudo-89286278/">Frederick Ogudo</a>
         </div>
         <div class="right-nav-items">
@@ -72,7 +72,7 @@
 
     <section class="project-main">
         <div class="project-main-article ava1">
-            <img src="ava7.jpg" alt="avatar1">
+            <img src="image/ava7.jpg" alt="avatar1">
             <h3>Some heading</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quia veniam incidunt magnam tempora id
                 suscipit omnis eius officia esse dolor tempore similique nam optio, commodi perferendis ad adipisci
@@ -80,7 +80,7 @@
             <button class="project-btn">View Project</button>
         </div>
         <div class="project-main-article ava2">
-            <img src="ava4.jpg" alt="avatar2">
+            <img src="image/ava4.jpg" alt="avatar2">
             <h3>Some heading</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quia veniam incidunt magnam tempora id
                 suscipit omnis eius officia esse dolor tempore similique nam optio, commodi perferendis ad adipisci
@@ -88,7 +88,7 @@
             <button class="project-btn">View Project</button>
         </div>
         <div class="project-main-article ava3">
-            <img src="ava5.jpg" alt="avatar3">
+            <img src="image/ava5.jpg" alt="avatar3">
             <h3>Some heading</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quia veniam incidunt magnam tempora id
                 suscipit omnis eius officia esse dolor tempore similique nam optio, commodi perferendis ad adipisci
