--- a/knowledgeHut Project/projects.html
+++ b/knowledgeHut Project/projects.html
@@ -15,7 +15,7 @@
 
     <nav class="nav">
         <div class="left-nav-items left-nav-items-about">
-            <img src="dicebear.png" alt="avatar">
+            <img src="image/dicebear.png" alt="avatar">
             <a href="https://www.linkedin.com/in/frederick-ogudo-89286278/">Frederick Ogudo | Projects</a>
         </div>
         <div class="right-nav-items">
@@ -38,7 +38,7 @@
 
     <section class="project-main">
         <div class="project-main-article ava1">
-            <img src="ava7.jpg" alt="avatar1">
+            <img src="image/ava7.jpg" alt="avatar1">
             <h3>Some heading</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quia veniam incidunt magnam tempora id
                 suscipit omnis eius officia esse dolor tempore similique nam optio, commodi perferendis ad adipisci
@@ -46,7 +46,7 @@
             <button class="project-btn">View Project</button>
         </div>
         <div class="project-main-article ava2">
-            <img src="ava4.jpg" alt="avatar2">
+            <img src="image/ava4.jpg" alt="avatar2">
             <h3>Some heading</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quia veniam incidunt magnam tempora id
                 suscipit omnis eius officia esse dolor tempore similique nam optio, commodi perferendis ad adipisci
@@ -54,7 +54,7 @@
             <button class="project-btn">View Project</button>
         </div>
         <div class="project-main-article ava3">
-            <img src="ava5.jpg" alt="avatar3">
+            <img src="image/ava5.jpg" alt="avatar3">
             <h3>Some heading</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quia veniam incidunt magnam tempora id
                 suscipit omnis eius officia esse dolor tempore similique nam optio, commodi perferendis ad adipisci
@@ -62,7 +62,7 @@
             <button class="project-btn">View Project</button>
         </div>
         <div class="project-main-article ava4">
-            <img src="ava5.jpg" alt="avatar5">
+            <img src="image/ava5.jpg" alt="avatar5">
             <h3>Some heading</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quia veniam incidunt magnam tempora id
                 suscipit omnis eius officia esse dolor tempore similique nam optio, commodi perferendis ad adipisci
@@ -70,7 +70,7 @@
             <button class="project-btn">View Project</button>
         </div>
         <div class="project-main-article ava5">
-            <img src="ava6.jpg" alt="avatar5">
+            <img src="image/ava6.jpg" alt="avatar5">
             <h3>Some heading</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quia veniam incidunt magnam tempora id
                 suscipit omnis eius officia esse dolor tempore similique nam optio, commodi perferendis ad adipisci
@@ -78,7 +78,7 @@
             <button class="project-btn">View Project</button>
         </div>
         <div class="project-main-article ava6">
-            <img src="ava7.jpg" alt="avatar6">
+            <img src="image/ava7.jpg" alt="avatar6">
             <h3>Some heading</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quia veniam incidunt magnam tempora id
                 suscipit omnis eius officia esse dolor tempore similique nam optio, commodi perferendis ad adipisci
